--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,13 +12,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.4.0",
     "framer-motion": "^4",
     "mobx": "^6.3.8",
     "mobx-react-lite": "^3.2.2",
+    "postcss": "^8.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "next",
     "react-tooltip": "^4.2.21",
+    "tailwindcss": "^3.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
