--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mobx": "^6.3.8",
     "mobx-react-lite": "^3.2.2",
     "postcss": "^8.4.4",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "next",
