--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^10.4.0",
+    "classnames": "^2.3.1",
     "framer-motion": "^4",
     "mobx": "^6.3.8",
     "mobx-react-lite": "^3.2.2",
