--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mobx-react-lite": "^3.2.2",
     "postcss": "^8.4.4",
     "prettier": "^2.5.1",
+    "prettier-plugin-jsdoc": "^0.3.30",
     "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
