Convert to react-popper-tooltip

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "postcss": "^8.4.4",
     "prettier": "^2.5.1",
     "prettier-plugin-jsdoc": "^0.3.30",
-    "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-popper-tooltip": "^4.3.1",
     "react-scripts": "next",
     "react-tooltip": "^4.2.21",
     "tailwindcss": "^3.0.1",
