--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-popper-tooltip": "^4.3.1",
     "react-scripts": "next",
+    "react-switch": "^6.0.0",
     "react-tooltip": "^4.2.21",
     "tailwindcss": "^3.0.1",
     "typescript": "^4.1.2",
