--- a/package.json
+++ b/package.json
@@ -53,5 +53,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,css,md}": "eslint --fix"
   }
 }
