--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier-plugin-jsdoc": "^0.3.30",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-popper-tooltip": "^4.3.1",
     "react-scripts": "next",
     "react-switch": "^6.0.0",
