--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "lint-staged": "^12.1.7"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,css,md}": "eslint --fix"
+    "*.{ts,tsx,js,css,md}": "eslint --fix --max-warnings 0"
   }
 }
