--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-popper-tooltip": "^4.3.1",
     "react-scripts": "next",
     "react-switch": "^6.0.0",
+    "react-tabs": "^3.2.3",
     "react-tooltip": "^4.2.21",
     "tailwindcss": "^3.0.1",
     "typescript": "^4.1.2",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-tabs": "^2.3.4",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7"
   },
