--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-popper-tooltip": "^4.3.1",
-    "react-scripts": "next",
+    "react-scripts": "^5.0.0",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
     "react-tooltip": "^4.2.21",
