--- a/package.json
+++ b/package.json
@@ -5,31 +5,20 @@
   "dependencies": {
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "autoprefixer": "^10.4.0",
     "classnames": "^2.3.1",
     "framer-motion": "^4",
     "mobx": "^6.3.8",
     "mobx-react-lite": "^3.2.2",
     "postcss": "^8.4.4",
-    "prettier": "^2.5.1",
-    "prettier-plugin-jsdoc": "^0.3.30",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-popper-tooltip": "^4.3.1",
-    "react-scripts": "^5.0.0",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
     "react-tooltip": "^4.2.21",
     "tailwindcss": "^3.0.1",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -57,9 +46,20 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-tabs": "^2.3.4",
     "husky": "^7.0.4",
-    "lint-staged": "^12.1.7"
+    "lint-staged": "^12.1.7",
+    "prettier": "^2.5.1",
+    "prettier-plugin-jsdoc": "^0.3.30",
+    "react-scripts": "^5.0.0",
+    "typescript": "^4.1.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,md}": "eslint --fix --max-warnings 0"
