--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "class-transformer": "^0.5.1",
     "classnames": "^2.3.1",
     "mobx": "^6.3.8",
     "mobx-react-lite": "^3.2.2",
@@ -14,6 +15,7 @@
     "react-popper-tooltip": "^4.3.1",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
+    "reflect-metadata": "^0.1.13",
     "tailwindcss": "^3.0.1"
   },
   "scripts": {
