--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "autoprefixer": "^10.4.0",
     "class-transformer": "^0.5.1",
     "classnames": "^2.3.1",
+    "immer": "^9.0.15",
     "postcss": "^8.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
