--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.15",
     "postcss": "^8.4.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "react-popper-tooltip": "^4.3.1",
-    "react-switch": "^6.0.0",
-    "react-tabs": "^3.2.3",
+    "react-popper-tooltip": "^4.4.2",
+    "react-switch": "^7.0.0",
+    "react-tabs": "^5.1.0",
     "reflect-metadata": "^0.1.13",
     "tailwindcss": "^3.0.1"
   },
@@ -43,13 +43,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/react-tabs": "^2.3.4",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
