--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-switch": "^7.0.0",
     "react-tabs": "^5.1.0",
     "reflect-metadata": "^0.1.13",
-    "tailwindcss": "^3.0.1"
+    "tailwindcss": "^3.0.1",
+    "use-sync-external-store": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,13 +46,14 @@
   "devDependencies": {
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-tabs": "^2.3.4",
+    "@types/use-sync-external-store": "^0.0.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
