--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.4",
     "autoprefixer": "^10.4.0",
     "class-transformer": "^0.5.1",
     "classnames": "^2.3.1",
@@ -13,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-popper-tooltip": "^4.4.2",
+    "react-redux": "^8.0.2",
     "react-switch": "^7.0.0",
     "react-tabs": "^5.1.0",
     "reflect-metadata": "^0.1.13",
@@ -52,6 +54,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
     "@types/react-tabs": "^2.3.4",
     "@types/use-sync-external-store": "^0.0.3",
     "husky": "^7.0.4",
