--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
-    "autoprefixer": "^10.4.0",
     "class-transformer": "^0.5.1",
     "classnames": "^2.3.1",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.15",
-    "postcss": "^8.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
@@ -18,8 +16,7 @@
     "react-switch": "^7.0.0",
     "react-tabs": "^5.1.0",
     "reflect-metadata": "^0.1.13",
-    "tailwindcss": "^3.0.1",
-    "use-sync-external-store": "^1.2.0"
+    "tailwindcss": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,9 +53,10 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-tabs": "^2.3.4",
-    "@types/use-sync-external-store": "^0.0.3",
+    "autoprefixer": "^10.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
+    "postcss": "^8.4.4",
     "prettier": "^2.5.1",
     "prettier-plugin-jsdoc": "^0.3.30",
     "react-scripts": "^5.0.0",
