--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prettier": "^2.5.1",
     "prettier-plugin-jsdoc": "^0.3.30",
     "react-scripts": "^5.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.1.2"
   },
   "lint-staged": {
