--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,9 @@
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# build artifacts
+/.parcel-cache/
+/dist/
 
 npm-debug.log*
 yarn-debug.log*
