--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/preset-react": "^7.18.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@parcel/bundler-experimental": "^2.7.0",
     "@parcel/transformer-svg-react": "^2.7.0",
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.11.4",
