--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.3.1",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.15",
+    "pretty-ms": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
