--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "immer": "^9.0.15",
     "pretty-ms": "^8.0.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-popper-tooltip": "^4.4.2",
