--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-config-react-app": "^7.0.1",
     "husky": "^7.0.4",
     "jest": "^28.0.0",
+    "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^12.1.7",
     "parcel": "^2.7.0",
     "postcss": "^8.4.4",
