--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "scripts": {
     "dev": "parcel src/index.html",
+    "build": "rm -rf dist && parcel build src/index.html",
+    "deploy": "rsync -av --delete dist/ catgirl.ai:/var/www/wrtsc",
     "tas": "ts-node -T --esm --experimental-specifier-resolution=node src/engine/speedrun.ts",
     "test": "jest"
   },
